10 February 2009

* No longer redraw the status line every status-interval unless it has actually
  changed.

08 February 2009

* Don't treat empty arguments ("") differently when parsing configuration
  file/command prompt rather than command line.
* tmux 0.7 released.

03 February 2009

* New command, copy-buffer (alias copyb), to copy a session paste buffer to
  another session.

01 February 2009

* The character pair #(command) may now contain (escaped) right parenthesis.

30 January 2009

* . now bound to "command-prompt 'move-window %%'" by default, from joshe.

29 January 2009

* Window options to set status line fg, bg and attributes for a single
  window. Options are: window-status-fg, window-status-bg,
  window-status-attr. Set to "default" to use the session status colours.

  This allows quite neat things like:

	$ cat ~/bin/xssh
	#!/bin/sh

	if [ ! -z "$TMUX" ]; then
	case "$1" in
    	natalya)
	        tmux setw window-status-fg red >/dev/null
		;;
	natasha)
        	tmux setw window-status-fg yellow >/dev/null
		;;
	esac
	fi
	ssh "$@"
	[ ! -z "$TMUX" ] && tmux setw -u window-status-fg >/dev/null
	$ alias ssh="~/bin/xssh"

* Support #(command) in status-left, and status-right, which is displayed as
  the first line of command's output (e.g. set -g status-right
  "#(whoami)@#(hostname -s)"). Commands with )s aren't supported.

28 January 2009

* Support mouse in copy mode to move cursor. Can't do anything else at the
  moment until other mouse modes are handled.
* Better support for at least the most common variant of mouse input: parse it
  and adjust for different panes. Also support mouse in window/session choice
  mode.

27 January 2009

* Bring back the fancy window titles with session/window names: it is easy to
  work around problems with elinks (see FAQ).
* -u flag to scroll-mode and copy-mode to start scrolled one page
  up. scroll-mode -u is bound to prefix,page-up (ppage) by default.